Added 2018 vdat photos

--- a/index.html
+++ b/index.html
@@ -26,33 +26,42 @@
 <body>
 
 	<header id="header" class="transparent-navbar">
-		<div class="container">
-			<div class="navbar-header">
-				<div class="navbar-brand">
-					<a class="logo mt-4" href="#">
-                        <strong>
-                            <span class="logo-img">VDAT 2019</span>
-                            <span class="logo-alt-img" style="color: #FFF;">VDAT 2019</span>
-                        </strong>
-					</a>
+		<div class="row">
+			<div class="text-center col-md-2">
+				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" height="100px" width="100px"></a>
+			</div>
+			<div class="container col-md-8">
+				<div class="navbar-header">
+					<div class="navbar-brand">
+						<a class="logo mt-4" href="#">
+							<strong>
+								<span class="logo-img">VDAT 2019</span>
+								<span class="logo-alt-img" style="color: #FFF;">VDAT 2019</span>
+							</strong>
+						</a>
+					</div>
+	
+					<button class="navbar-toggle">
+							<i class="fa fa-bars"></i>
+					</button>
 				</div>
-
-				<button class="navbar-toggle">
-						<i class="fa fa-bars"></i>
-				</button>
+	
+				<nav id="nav">
+					<ul class="main-nav nav navbar-nav navbar-right">
+						<li><a href="#home">Home</a></li>
+						<li><a href="#events">Events</a></li>
+						<li><a href="#schedule">Schedule</a></li>
+						<li><a href="#commitee">Committee</a></li>
+						<li><a href="#sponsors">Sponsors</a></li>
+						<li><a href="#contact">Contact</a></li>
+						<li><a href="#forums">Forums</a></li>
+					</ul>
+				</nav>
 			</div>
 
-			<nav id="nav">
-				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#events">Events</a></li>
-					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#commitee">Committee</a></li>
-					<li><a href="#sponsors">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#forums">Forums</a></li>
-				</ul>
-			</nav>
+			<div class="text-center col-md-2">
+				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" height="100px" width="100px"></a>
+			</div>
 		</div>
 	</header>
 
@@ -107,16 +116,25 @@
 		<div class="container">
 			<div class="row">
 				<div id="galery-owl" class="owl-carousel owl-theme">
+
 					<div class="galery-item">
-						<img src="./img/galery01.jpg" alt="">
+						<img src="./img/galery01.jpg" alt="" width="400px" height="500px">
 					</div>
 
 					<div class="galery-item">
-						<img src="./img/galery02.jpg" alt="">
+						<img src="./img/galery02.jpg" alt="" width="400px" height="500px">
 					</div>
 
 					<div class="galery-item">
-						<img src="./img/galery03.jpg" alt="">
+						<img src="./img/galery03.jpg" alt="" width="400px" height="500px">
+					</div>
+
+					<div class="galery-item">
+						<img src="./img/galery04.jpg" alt="" width="400px" height="500px">
+					</div>
+
+					<div class="galery-item">
+						<img src="./img/galery05.jpg" alt="" width="400px" height="500px">
 					</div>
 
 				</div>
