Added chair members

--- a/index.html
+++ b/index.html
@@ -246,36 +246,136 @@
 	</div>
 
 	<div id="commitee" class="section">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row text-center">
 				<div class="section-title">
 					<h3 class="title"><span>Our</span> <span style="color: #dd0a37;">Commitee</span></h3>
 				</div>
                 <div class="col-md-4">
                     <ul>
-                        <li><a>Advisory Committee</a></li>
-                        <li><a>General Chairs</a></li>
-                        <li><a>Program Chairs</a></li>
-                        <li><a>Women in Engineering Chairs</a></li>
-                        <li><a>Startup Chairs</a></li>
+						<li><a><strong>Advisory Committee</strong></a>
+							<ol>
+								<li>V. Agrawal, Auburn University, USA</li>
+								<li>V. Ramgopal Rao, IIT Delhi, India</li>
+								<li>Satya Gupta, Senzop, Bangalore, India</li>
+								<li>Jaswinder Ahuja, Cadence, Noida, India</li>
+								<li>Anirban Sengupta, IIT Indore, India</li>
+								<li>M. Huebner, BTU, Cottbus, Germany</li>
+								<li>A. Bharadwaj, IISc Bangalore, India</li>
+								<li>Santanu Chaudhury, IIT Jodhpur, India</li>
+								<li>Niranjan Pol, Seagate, Pune, India</li>
+								<li>Roy P. Paily, IIT Guwahati, India</li>
+								<li>Milos Krstic, IHP, Germany</li>
+								<li>Manoj S Gaur, IIT Jammu, India</li>
+								<li>Surindra Singh, SCL, Mohali, India</li>
+								<li>Sunita Verma, MeitY, New Delhi, India</li>
+							</ol>
+						</li>
+						<li><strong><a>General Chairs</a></strong>
+							<ol>
+								<li>S. K. Vishvakarma, IIT Indore, India</li>
+								<li>Anirban Sengupta, IIT Indore, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Program Chairs</a></strong>
+							<ol>
+								<li>Virendra Singh, IIT Bombay, India</li>
+								<li>Sudeb Dasgupta, IIT Roorkee, India</li>
+								<li>Rohit Sharma, IIT Ropar, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Women in Engineering Chairs</a></strong>
+							<ol>
+								<li>Sangeeta Nkhate, MANIT, Bhopal, India</li>
+								<li>Joycee Mekie, IIT Gandhinagar, India</li>
+								<li>Trapti Jain, IIT Indore, India</li>
+							</ol>
+						</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul>
-                        <li><a>Tutorial Chairs</a></li>
-                        <li><a>Publicity Chairs</a></li>
-                        <li><a>Publication Chairs</a></li>
-                        <li><a>Exhibition Chairs</a></li>
-                        <li><a>Design Contest Chairs</a></li>
+						<li><strong><a>Tutorial Chairs</a></strong>
+							<ol>
+								<li>Shailesh Singh Chouhan, Lulia University, Sweden</li>
+								<li>Ashish Kumar, STMicroelectronics, India</li>
+								<li>Ram Bilas Pachori, IIT Indore, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Publicity Chairs</a></strong>
+							<ol>
+								<li>Akash Kumar, TU Dresden, Germany</li>
+								<li>Shaibal Mukherjee, IIT Indore, India</li>
+								<li>Bhuvan B., NIT Calicut, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Publication Chairs</a></strong>
+							<ol>
+								<li>Brajesh K. Kaushik, IIT Roorkee, India</li>
+								<li>Mukesh Kumar, IIT Indore, India</li>
+								<li>Jai Gopal Pandey, CEERI, Pilani, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Exhibition Chairs</a></strong>
+							<ol>
+								<li>V. Neema, IET, DAVV, Indore, India</li>
+								<li>Abhinoy Kumar Singh, IIT Indore, India</li>
+								<li>Dheeraj Sharma, IIITDM, Jabalpur, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Design Contest Chairs</a></strong>
+							<ol>
+								<li>R. S. Gamad, SGSITS, Indore, India</li>
+								<li>Ravi Sindal, IET-DAVV, Indore</li>
+								<li>Kailash Chandra Ray, IIT Patna, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Startup Chairs</a></strong>
+							<ol>
+								<li>A. Srivastava, ABVIIITM Gwalior, India</li>
+								<li>Vimal Bhatia, IIT Indore, India</li>
+								<li>Himalya Bansal, AutoCiG, IESA, India</li>
+							</ol>
+						</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul>
-                        <li><a>Student Research Chairs</a></li>
-                        <li><a>Fellowship Chairs</a></li>
-                        <li><a>Sponsorship Chairs</a></li>
-                        <li><a>Industry Chairs</a></li>
-                        <li><a>Website Chairs</a></li>
+						<li><strong><a>Student Research Chairs</a></strong>
+							<ol>
+								<li>Srivathsan Vasudevan, IIT Indore, India</li>
+								<li>Linga R. Cenkeramaddi, UiA, Norway</li>
+								<li>M. Anbarasu, IIT Madras, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Fellowship Chairs</a></strong>
+							<ol>
+								<li>Gaurav Trivedi, IIT Guwahati, India</li>
+								<li>Ramesh Vaddi, NUS, Singapore</li>
+								<li>Hitesh Shrimali, IIT Mandi, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Sponsorship Chairs</a></strong>
+							<ol>
+								<li>S. K. Vishvakarma, IIT Indore, India</li>
+								<li>Ajay Kumar Kushwaha, IIT Indore, India</li>
+								<li>Vivek Kanhangad, IIT Indore, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Industry Chairs</a></strong>
+							<ol>
+								<li>Jatinder Singh, IMEC, Bangalore, India</li>
+								<li>Preet Yadav, Wipro, Bangalore, India</li>
+								<li>Devesh Dwivedi, Globalfoundries, India</li>
+							</ol>
+						</li>
+						<li><strong><a>Website Chairs</a></strong>
+							<ol>
+								<li>Vipul Singh, IIT Indore, India</li>
+								<li>Balwinder Raj, NIT Jalandhar, India</li>
+								<li>Shree Prakash Tiwari, IIT Jodhpur, India</li>
+							</ol>
+						</li>
                     </ul>
                 </div>
 			</div>
