Added about indore

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</div>
 
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="about-content" style="font-size: 1.4em">
+					<div class="about-content" style="font-size: 22px">
 						<p class="text-left">
 								VDAT began as a small workshop in the year 1998. In 2005, it acquired the
 								status of a Symposium. The purpose of the Symposium is to promote the
@@ -108,23 +108,59 @@
 								researchers, startups and industrial practitioners together to exchange their
 								ideas in the area of VLSI design, test and system design.
 						</p>
-						<h2 class="text-left">Events list: </h2>
-                        <ul class="text-left">
-                            <li>Keynote</li>
-                            <li>Tutorials</li>
-                            <li>Panel Discussion</li>
-                            <li>Design Contest
-                                <ul>
-                                    <li>Chip to System Design</li>
-                                    <li>Autonomous Embedded System</li>
-                                </ul>
-                            </li>
-                            <li>Banquet Dinner</li>
-                            <li>Cultural Function</li>
-                            <li>Round Table Discussion</li>
-                        </ul>
 					</div>
 				</div>
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="section-title">
+					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">Indore</span></h3>
+				</div>
+
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="about-content" style="font-size: 22px">
+						<p class="text-left">
+							Indore is a fascinating city with a blend of a rich cultural and historical heritage hosting a wide range of styles of the Maratha, Mughal, Holkar and British era. Chhatris, Laal Bag Palace, Kanch Mandir are cues of its architectural exellence. Situated on one of India's oldest pilgrimage routes from Mahakaal at Ujjain on river Kshipra, to Omkareshwar on the river Narmada and onwards to Rameshwaram, Indore is embellished by several forts and rocky shrines: Mandu, Dewas, Maheshwar, Omkareshwar being the prominent ones. One of the most legendary rulers of Indian history, Devi Ahilyabai Holkar is the patron of many traditional architecture here. Apart from these, the rustic spirit of Chokhi and Nakhrali Dhani, heritage resorts on the outskirts of Indore filled with varied traditional Rajasthani delicacies adds a Rajasthani flavour to the city. Gujarati and Marathi cultures also have influenced life in Indore. Being situated in the heart of India, Indore has excellent air and rail connectivities with the metro cities namely Mumbai, Kolkata, Delhi, Hyderabad, Bangalore and many more. Places like Agra, Jaipur, Udaipur, Ajanta-Ellora caves are in its vicinity. Agra, our city of pride entails the 8th Wonder, white marble mausoleum, Taj Mahal. It is a universally admired masterpieces of the world's heritage.
+						</p>
+					</div>
+				</div>
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="section-title">
+					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">IIT</span> Indore</h3>
+				</div>
+
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="about-content" style="font-size: 22px">
+						<p class="text-left">
+								IIT Indore located at Simrol, Khandwa Road, Madhya Pradesh, is one of the eight new Indian Institutes of Technology (IIT) established by the Ministry of Human Resource Development (MHRD), Government of India in 2008-09. Recently<strong> IIT Indore is ranked 14th amongst all engineering universities and institutions in India and a very impressive 5th in teaching and resource category by MHRD as per NIRF 2018 and IIT Indore debuts with a rank of 351-400 in
+										the Times Higher Education World University
+										Rankings 2019, 2nd amongst Indian
+										Institutes.</strong>. IIT Indore, established in 2009 by the Government of India, is a unique educational institution that focuses on interdisciplinary research and teaching. The institute is growing rapidly as the only center for advanced learning and knowledge-dissemination in the pure and applied sciences in Central India. The interdisciplinary approach of the institute is well reflected in its departmental setup comprising basic sciences, a school of engineering and a school of social sciences. The larger commitment of the institute to socio-economic development is evident in its multi-dimensional approach to social problems and is engraved in its motto ('knowledge for the well being of all'), which makes this institution one of its kind and it stands out even within the distinguished IIT family. 
+						</p>
+						<br><br>
+						<h2 class="text-left">Events list: </h2>
+						<ul class="text-left">
+							<li>Keynote</li>
+							<li>Tutorials</li>
+							<li>Panel Discussion</li>
+							<li>Design Contest
+								<ul>
+									<li>Chip to System Design</li>
+									<li>Autonomous Embedded System</li>
+								</ul>
+							</li>
+							<li>Banquet Dinner</li>
+							<li>Cultural Function</li>
+							<li>Round Table Discussion</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<br><br>
+			<div class="container">
+				
 			</div>
 		</div>
 	</div>
@@ -379,6 +415,8 @@
 						to register and present each paper
 						separately.
 					</p>
+					<h5>Submission Link:</h5>
+					<p>https://easychair.org/conferences/?conf=vdat2019</p>
 				</div>
 				<br>
 				<div class="text-left impDates">
