--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 						<li><a href="#events">About</a></li>
 						<li><a href="#schedule">Program Schedule</a></li>
 						<li><a href="#callForPapers">Call For Papers</a></li>
-						<li><a href="#forums">Forums</a></li>
+						<li><a href="#forumScroll">Forums</a></li>
 						<li><a href="#commitee">Committee</a></li>
 						<li><a href="#sponsors">Sponsors</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#contactScroll">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -74,14 +74,16 @@
 		<div class="home-wrapper">
 			<div class="container-fluid">
 				<div class="row">
-					<h1 style="color: #FFF;">23<sup>rd</sup> International Symposium on VLSI Design and Test</h1>
+					<h1 style="color: #FFF;">23<sup>rd</sup> International Symposium on VLSI Design and Test (VDAT-2019)</h1>
 					<br><br>
 					<div class="text-center">
 						<div class="home-content">
-							<h2 style="color:#FFF;">Theme: Chip to System Design for Artificial Intelligence based Systems</h2>
-							<h4 class="lead" style="color: #FFF;">Indian Institute of Technology Indore, India <br> July 4 - 6, 2019 </h4>
-							<a href="#" class="main-btn">Register</a>
+							<h2 style="color: #FFF;">Indian Institute of Technology Indore, India <br> July 4 - 6, 2019 </h2>
+							<br>
+							<h2 style="color:#FFF;"><span style="color:#FFF">Theme</span><br>Chip to System Design for Artificial Intelligence based Systems</h2>
+							<a class="main-btn">Register</a>
 							<a href="pdf/cfp.pdf" target="__blank" class="main-btn">Download Call For Papers(CFP)</a>
+							<a href="#impDatesScroll" class="main-btn">Important Dates</a>
 						</div>
 					</div>
 				</div>
@@ -100,13 +102,23 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="about-content" style="font-size: 22px">
 						<p class="text-left">
-								VDAT began as a small workshop in the year 1998. In 2005, it acquired the
-								status of a Symposium. The purpose of the Symposium is to promote the
-								advancement of all aspects of VLSI. The 23rd International Symposium on
-								VLSI Design and Test (VDAT-2019) is being held in Indian institute of
-								Technology Indore, India. The aim of this symposium is to bring academics,
-								researchers, startups and industrial practitioners together to exchange their
-								ideas in the area of VLSI design, test and system design.
+							VDAT began as a small workshop in the year 1998. In 2005, it acquired the
+							status of a Symposium. The purpose of the Symposium is to promote the
+							advancement of all aspects of VLSI. The 23rd International Symposium on
+							VLSI Design and Test (VDAT-2019) is being held in Indian institute of
+							Technology Indore, India. The aim of this symposium is to bring academics,
+							researchers, startups and industrial practitioners together to exchange their
+							ideas in the area of VLSI design, test and system design.
+							<br>
+							<div id="archives" class="text-left">
+								<h4>Archives</h4>
+								<ul style="list-style-type: none;">
+									<li><a href="http://vdat2018.tce.edu/" target="__blank">VDAT 2018</a></li>
+									<li><a href="https://www.iitr.ac.in/vdat2017/" target="__blank">VDAT 2017</a></li>
+									<li><a href="http://www.iitg.ac.in/vdat2016/" target="__blank">VDAT 2016</a></li>
+									<li><a href="http://www.nirmauni.ac.in/itnu/Events/45" target="__blank">VDAT 2015</a></li>
+								</ul>
+							</div>
 						</p>
 					</div>
 				</div>
@@ -122,6 +134,27 @@
 						<p class="text-left">
 							Indore is a fascinating city with a blend of a rich cultural and historical heritage hosting a wide range of styles of the Maratha, Mughal, Holkar and British era. Chhatris, Laal Bag Palace, Kanch Mandir are cues of its architectural exellence. Situated on one of India's oldest pilgrimage routes from Mahakaal at Ujjain on river Kshipra, to Omkareshwar on the river Narmada and onwards to Rameshwaram, Indore is embellished by several forts and rocky shrines: Mandu, Dewas, Maheshwar, Omkareshwar being the prominent ones. One of the most legendary rulers of Indian history, Devi Ahilyabai Holkar is the patron of many traditional architecture here. Apart from these, the rustic spirit of Chokhi and Nakhrali Dhani, heritage resorts on the outskirts of Indore filled with varied traditional Rajasthani delicacies adds a Rajasthani flavour to the city. Gujarati and Marathi cultures also have influenced life in Indore. Being situated in the heart of India, Indore has excellent air and rail connectivities with the metro cities namely Mumbai, Kolkata, Delhi, Hyderabad, Bangalore and many more. Places like Agra, Jaipur, Udaipur, Ajanta-Ellora caves are in its vicinity. Agra, our city of pride entails the 8th Wonder, white marble mausoleum, Taj Mahal. It is a universally admired masterpieces of the world's heritage.
 						</p>
+					</div>
+				</div>
+			</div>
+			<br>
+			<div id="gallery">
+				<div class="container">
+					<div class="row">
+						<div id="galery-owl" class="owl-carousel owl-theme">
+		
+							<div class="galery-item">
+								<img src="./img/galery07.jpg" alt="" width="400px" height="500px">
+							</div>
+		
+							<div class="galery-item">
+								<img src="./img/galery08.jpg" alt="" width="400px" height="500px">
+							</div>
+		
+							<div class="galery-item">
+								<img src="./img/galery06.jpg" alt="" width="400px" height="500px">
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -165,10 +198,10 @@
 		</div>
 	</div>
 
-	<div id="galery">
+	<!-- <div id="galery">
 		<div class="container">
 			<div class="row">
-				<div id="galery-owl" class="owl-carousel owl-theme">
+				<div id="galery-owl2" class="owl-carousel owl-theme">
 
 					<div class="galery-item">
 						<img src="./img/galery01.jpg" alt="" width="400px" height="500px">
@@ -190,25 +223,11 @@
 						<img src="./img/galery05.jpg" alt="" width="400px" height="500px">
 					</div>
 
-					<div class="galery-item">
-						<img src="./img/galery06.jpg" alt="" width="400px" height="500px">
-					</div>
-
-					<div class="galery-item">
-						<img src="./img/galery07.jpg" alt="" width="400px" height="500px">
-					</div>
-
-					<div class="galery-item">
-						<img src="./img/galery08.jpg" alt="" width="400px" height="500px">
-					</div>
-
-					<div class="galery-item">
-						<img src="./img/galery05.jpg" alt="" width="400px" height="500px">
 					</div>
 
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div id="schedule" class="section">
@@ -332,6 +351,7 @@
 					electronics; 2D and advanced material electronics; Flash memory devices
 					and other emerging memory technologies ReRAM, PCM, SSTRAM etc.
 				</p>
+				<br>
 				<h4>VLSI Circuit and System Design</h4>
 				<p>
 					Low power, High-performance and robust design of logic, memory, analog,
@@ -347,6 +367,7 @@
 					energy/power requirements; Secure and intelligent system on chip (SoC)
 					design for automotive, health and defense applications.
 				</p>
+				<br>
 				<h4>CAD for VLSI and Hardware Security</h4>
 				<p>
 					Logic and behavioral synthesis; Placement, Routing and Floor planning; CAD
@@ -354,12 +375,14 @@
 					defense; Hardware-based security primitive design; Trusted design
 					automation, Tools & Information flow.
 				</p>
+				<br>
 				<h4>Testing and Verification</h4>
 				<p>
 					Design verification, Test, Reliability and Fault tolerance; Formal verification;
 					DFT; Fault modeling; Post-silicon validation; Testing memories and regular
 					logic arrays; Design for manufacturability and yield analysis.
 				</p>
+				<br>
 				<h4>FPGA based Design and Embedded Systems</h4>
 				<p>
 					FPGA based combinational/sequential logic/circuit design,
@@ -415,11 +438,12 @@
 						to register and present each paper
 						separately.
 					</p>
+					<div id="impDatesScroll"></div>
 					<h5>Submission Link:</h5>
 					<p>https://easychair.org/conferences/?conf=vdat2019</p>
 				</div>
-				<br>
-				<div class="text-left impDates">
+				<div class="text-left impDates" id="impDates">
+					<br><br><br>
 					<h5>Important Dates:</h5>
 					<ul>
 						<li>Regular Papers
@@ -454,11 +478,12 @@
 					</ul>
 				</div>
 				<br><br>
+				<div id="forumScroll"></div>
 				<a href="pdf/cfp.pdf" target="__blank" class="main-btn">Download Call For Papers(CFP)</a>
 			</div>
 		</div>
 	</div>
-
+	
 	<div id="forums" class="section">
 		<div class="container">
 			<br>
@@ -717,8 +742,9 @@
 				<div class="col-md-8 col-md-offset-2">
 					<div class="cta-content text-center">
 						<h2>Register Now!</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 						<a href="#" class="main-btn">Register</a>
+						<div id="contactScroll"></div>
 					</div>
 				</div>
 			</div>
