--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 	<header id="header" class="transparent-navbar">
 		<div class="row">
 			
-			<div class="text-center col-md-2">
+			<div class="text-right col-md-1">
 				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" height="100px" width="100px"></a>
 			</div>
 
-			<div class="container col-md-8">
+			<div class="container col-md-10 text-center">
 				<div class="navbar-header">
 					<div class="navbar-brand">
 						<a class="logo mt-4" href="#">
@@ -62,8 +62,8 @@
 				</nav>
 			</div>
 
-			<div class="text-center col-md-2">
-				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" height="100px" width="120px"></a>
+			<div class="text-left col-md-1">
+				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" height="100px" width="100px"></a>
 			</div>
 		</div>
 	</header>
@@ -74,13 +74,13 @@
 		<div class="home-wrapper">
 			<div class="container-fluid">
 				<div class="row">
-					<h1 style="color: #FFF;">23<sup>rd</sup> International Symposium on VLSI Design and Test (VDAT-2019)</h1>
-					<br><br>
 					<div class="text-center">
 						<div class="home-content">
+							<h1 style="color: #FFF;">23<sup>rd</sup> International Symposium on VLSI Design and Test (VDAT-2019)</h1>
+							<br><br>
 							<h2 style="color: #FFF;">Indian Institute of Technology Indore, India <br> July 4 - 6, 2019 </h2>
 							<br>
-							<h2 style="color:#FFF;"><span style="color:#FFF">Theme</span><br>Chip to System Design for Artificial Intelligence based Systems</h2>
+							<h2 style="color:#FFF;"><span style="color:#FFF">Theme of VDAT 2019:</span><br>Chip to System Design for Artificial Intelligence based Systems</h2>
 							<a class="main-btn">Register</a>
 							<a href="pdf/cfp.pdf" target="__blank" class="main-btn">Download Call For Papers(CFP)</a>
 							<a href="#impDatesScroll" class="main-btn">Important Dates</a>
@@ -440,7 +440,7 @@
 					</p>
 					<div id="impDatesScroll"></div>
 					<h5>Submission Link:</h5>
-					<p>https://easychair.org/conferences/?conf=vdat2019</p>
+					<p><a href="https://easychair.org/conferences/?conf=vdat2019" target="__blank">https://easychair.org/conferences/?conf=vdat2019</a></p>
 				</div>
 				<div class="text-left impDates" id="impDates">
 					<br><br><br>
