--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 	<header id="header" class="transparent-navbar">
 		<div class="row">
 			
-			<div class="text-right col-md-1">
+			<div class="text-right col-sm-1">
 				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" height="100px" width="100px"></a>
 			</div>
 
-			<div class="container col-md-10 text-center">
+			<div class="container col-sm-10 text-center">
 				<div class="navbar-header">
 					<div class="navbar-brand">
 						<a class="logo mt-4" href="#">
@@ -62,7 +62,7 @@
 				</nav>
 			</div>
 
-			<div class="text-left col-md-1">
+			<div class="text-left col-sm-1">
 				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" height="100px" width="100px"></a>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">VDAT</span> 2019</h3>
 				</div>
 
-				<div class="col-md-8 col-md-offset-2 text-center">
+				<div class="col-sm-8 col-sm-offset-2 text-center">
 					<div class="about-content" style="font-size: 22px">
 						<p class="text-left">
 							VDAT began as a small workshop in the year 1998. In 2005, it acquired the
@@ -129,7 +129,7 @@
 					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">Indore</span></h3>
 				</div>
 
-				<div class="col-md-8 col-md-offset-2 text-center">
+				<div class="col-sm-8 col-sm-offset-2 text-center">
 					<div class="about-content" style="font-size: 22px">
 						<p class="text-left">
 							Indore is a fascinating city with a blend of a rich cultural and historical heritage hosting a wide range of styles of the Maratha, Mughal, Holkar and British era. Chhatris, Laal Bag Palace, Kanch Mandir are cues of its architectural exellence. Situated on one of India's oldest pilgrimage routes from Mahakaal at Ujjain on river Kshipra, to Omkareshwar on the river Narmada and onwards to Rameshwaram, Indore is embellished by several forts and rocky shrines: Mandu, Dewas, Maheshwar, Omkareshwar being the prominent ones. One of the most legendary rulers of Indian history, Devi Ahilyabai Holkar is the patron of many traditional architecture here. Apart from these, the rustic spirit of Chokhi and Nakhrali Dhani, heritage resorts on the outskirts of Indore filled with varied traditional Rajasthani delicacies adds a Rajasthani flavour to the city. Gujarati and Marathi cultures also have influenced life in Indore. Being situated in the heart of India, Indore has excellent air and rail connectivities with the metro cities namely Mumbai, Kolkata, Delhi, Hyderabad, Bangalore and many more. Places like Agra, Jaipur, Udaipur, Ajanta-Ellora caves are in its vicinity. Agra, our city of pride entails the 8th Wonder, white marble mausoleum, Taj Mahal. It is a universally admired masterpieces of the world's heritage.
@@ -164,7 +164,7 @@
 					<h3 class="title"><span>About</span> <span style="color: #dd0a37;">IIT</span> Indore</h3>
 				</div>
 
-				<div class="col-md-8 col-md-offset-2 text-center">
+				<div class="col-sm-8 col-sm-offset-2 text-center">
 					<div class="about-content" style="font-size: 22px">
 						<p class="text-left">
 								IIT Indore located at Simrol, Khandwa Road, Madhya Pradesh, is one of the eight new Indian Institutes of Technology (IIT) established by the Ministry of Human Resource Development (MHRD), Government of India in 2008-09. Recently<strong> IIT Indore is ranked 14th amongst all engineering universities and institutions in India and a very impressive 5th in teaching and resource category by MHRD as per NIRF 2018 and IIT Indore debuts with a rank of 351-400 in
@@ -238,7 +238,7 @@
 					<h3 class="title"><span>Event</span> <span style="color: #dd0a37;">Schedule</span></h3>
 				</div>
 
-				<div class="col-md-8 col-md-offset-2">
+				<div class="col-sm-8 col-sm-offset-2">
 
 					<div class="events-wrapper">
 						<div class="event">
@@ -540,7 +540,7 @@
 				<div class="section-title">
 					<h3 class="title"><span>Our</span> <span style="color: #dd0a37;">Commitee</span></h3>
 				</div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <ul>
 						<li><a><strong>Advisory Committee</strong></a>
 							<ul>
@@ -582,7 +582,7 @@
 						</li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <ul>
 						<li><strong><a>Publicity Chairs</a></strong>
 							<ul>
@@ -628,7 +628,7 @@
 						</li>						
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <ul>											
 						<li><strong><a>Exhibition Chairs</a></strong>
 							<ul>
@@ -679,49 +679,49 @@
 					<h3 class="title"><span>Our</span> <span style="color: #dd0a37;">Sponsors</span></h3>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
 				</div>
 
-				<div class="col-md-3 col-sm-4 col-xs-6">
+				<div class="col-sm-3 col-sm-4 col-xs-6">
 					<a href="#" class="sponsor">
 						<img src="./img/sponsor.png" alt="">
 					</a>
@@ -739,7 +739,7 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
+				<div class="col-sm-8 col-sm-offset-2">
 					<div class="cta-content text-center">
 						<h2>Register Now!</h2>
 						<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
@@ -790,7 +790,7 @@
 		<div class="container">
 			<div class="row">
 
-                <div class="col-md-6 text-center">
+                <div class="col-sm-6 text-center">
                     <div class="footer-brand">
                         <a class="logo" href="#">
                             VDAT 2019
@@ -798,7 +798,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 text-right">
+                <div class="col-sm-6 text-right">
                     <span>Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a>Pranshu Maheshwari</a></span>
                 </div>
                 
