Changed Logo position

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<header id="header" class="transparent-navbar">
 		<div class="row">
 			
-			<div class="text-right col-sm-1">
+			<div class="text-center col-sm-1">
 				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" height="100px" width="100px"></a>
 			</div>
 
@@ -62,7 +62,7 @@
 				</nav>
 			</div>
 
-			<div class="text-left col-sm-1">
+			<div class="text-center col-sm-1">
 				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" height="100px" width="100px"></a>
 			</div>
 		</div>
