Changed font-size of header to view port

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 				<div class="row">
 					<div class="text-center">
 						<div class="home-content">
-							<h1 style="color: #FFF;">23<sup>rd</sup> International Symposium on VLSI Design and Test (VDAT-2019)</h1>
+							<h1 style="color: #FFF;font-size: 5.5vh;">23<sup>rd</sup> International Symposium on VLSI Design and Test<br><br>(VDAT-2019)</h1>
 							<br><br>
-							<h2 style="color: #FFF;">Indian Institute of Technology Indore, India <br> July 4 - 6, 2019 </h2>
+							<h2 style="color: #FFF;font-size: 3vh;">Indian Institute of Technology Indore, India <br> July 4 - 6, 2019 </h2>
 							<br>
-							<h2 style="color:#FFF;"><span style="color:#FFF">Theme of VDAT 2019:</span><br>Chip to System Design for Artificial Intelligence based Systems</h2>
+							<h2 style="color:#FFF;font-size: 3vh;"><span style="color:#FFF">Theme of VDAT 2019:</span><br>Chip to System Design for Artificial Intelligence based Systems</h2>
 							<a class="main-btn">Register</a>
 							<a href="pdf/cfp.pdf" target="__blank" class="main-btn">Download Call For Papers(CFP)</a>
 							<a href="#impDatesScroll" class="main-btn">Important Dates</a>
