--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="row">
 			
 			<div class="text-center col-sm-1">
-				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" height="100px" width="100px"></a>
+				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" class="image"></a>
 			</div>
 
 			<div class="container col-sm-10 text-center">
@@ -63,7 +63,7 @@
 			</div>
 
 			<div class="text-center col-sm-1">
-				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" height="100px" width="100px"></a>
+				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" class="image"></a>
 			</div>
 		</div>
 	</header>
