--- a/index.html
+++ b/index.html
@@ -26,45 +26,47 @@
 <body>
 
 	<header id="header" class="transparent-navbar">
-		<div class="row">
+		<div class="container-fluid">
+				<div class="row">
 			
-			<div class="text-center col-sm-1">
-				<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" class="image"></a>
-			</div>
-
-			<div class="container col-sm-10 text-center">
-				<div class="navbar-header">
-					<div class="navbar-brand">
-						<a class="logo mt-4" href="#">
-							<strong>
-								<span class="logo-img">VDAT 2019</span>
-								<span class="logo-alt-img" style="color: #FFF;">VDAT 2019</span>
-							</strong>
-						</a>
+					<div class="text-center col-sm-1">
+						<a href="http://iiti.ac.in" target="__blank"><img src="img/iiti.png" alt="IIT Indore" class="image"></a>
 					</div>
-	
-					<button class="navbar-toggle">
-							<i class="fa fa-bars"></i>
-					</button>
+		
+					<div class="container col-sm-10 text-center head">
+						<div class="navbar-header">
+							<div class="navbar-brand">
+								<a class="logo mt-4" href="#">
+									<strong>
+										<span class="logo-img heading">VDAT 2019</span>
+										<span class="logo-alt-img heading" style="color: #FFF;">VDAT 2019</span>
+									</strong>
+								</a>
+							</div>
+			
+							<button class="navbar-toggle">
+									<i class="fa fa-bars"></i>
+							</button>
+						</div>
+			
+						<nav id="nav">
+							<ul class="main-nav nav navbar-nav navbar-right nav-list">
+								<li><a href="#home">Home</a></li>
+								<li><a href="#events">About</a></li>
+								<li><a href="#schedule">Program Schedule</a></li>
+								<li><a href="#callForPapers">Call For Papers</a></li>
+								<li><a href="#forumScroll">Forums</a></li>
+								<li><a href="#commitee">Committee</a></li>
+								<li><a href="#sponsors">Sponsors</a></li>
+								<li><a href="#contactScroll">Contact</a></li>
+							</ul>
+						</nav>
+					</div>
+		
+					<div class="text-center col-sm-1">
+						<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" class="image"></a>
+					</div>
 				</div>
-	
-				<nav id="nav">
-					<ul class="main-nav nav navbar-nav navbar-right">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#events">About</a></li>
-						<li><a href="#schedule">Program Schedule</a></li>
-						<li><a href="#callForPapers">Call For Papers</a></li>
-						<li><a href="#forumScroll">Forums</a></li>
-						<li><a href="#commitee">Committee</a></li>
-						<li><a href="#sponsors">Sponsors</a></li>
-						<li><a href="#contactScroll">Contact</a></li>
-					</ul>
-				</nav>
-			</div>
-
-			<div class="text-center col-sm-1">
-				<a href="http://vlsi_india.tripod.com/" target="__blank"><img src="img/vlsi.png" alt="VLSI Society Of India" class="image"></a>
-			</div>
 		</div>
 	</header>
 
